# SQLite

./: CMakeLists.txt  README.md  main.cpp  pch.h
common/: SindyRunTime.h  const_define.cpp  const_define.h  table_data.cpp  table_data.h
effective/: CFunctions.cpp  CFunctions.h  HighPerformance.cpp  HighPerformance.h  MultiAttach.cpp  MultiAttach.h
sample/: ExpresstionEvaluate.cpp  ExpresstionEvaluate.h  ExpresstionTest.cpp  ExpresstionTest.h
sample/muParser/: muParserTest.cpp  muParserTokenReader.cpp
sql/: case_when.cpp  case_when.h  group_by.cpp  group_by.h  petal.cpp  petal.h
